Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42233

moc: error parsing a define that contains #

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.4.0
    • 5.3.2
    • None
    • ArchLinux, CMake 3.0.2-1, Qt5 5.3.2-2
    • I27deab362341f17ca3b0160615bb1b0934c3d5c3

      Qt parsing of source files are incomplete making the resulted moc file cause errors when used with Boost::Fusion. The error is:

      /usr/include/boost/fusion/container/vector/vector.hpp:25: Error: '#' is not followed by a macro parameter AUTOGEN: error: process for /home/work/daikin/dahmi/build/src/app/main.moc failed: /usr/include/boost/fusion/container/vector/vector.hpp:25: Error: '#' is not followed by a macro parameter

      I've already talked to the Fusion developers who found out the issue was with the moc file.
      fusion bug report
      View the attach files README for info on how to duplicate this problem.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ogoffart Olivier Goffart (Woboq GmbH)
            rlayman R. Layman
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes